# cb-mpc

./: .clang-format  .codeflow.yml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  DOCKER_README.md  Dockerfile  GO_BUILD_README.md  Makefile  README.md  SECURITY.md  build-go.sh  cb-mpc.sln  dev-tools.sh  docker-build.sh  docker-compose.yml  docker-test.sh
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  make-release.yml
cb-mpc-go/: go.mod
cb-mpc-go/cblib/: cblib.cpp  cblib.go  cblib.h
cb-mpc-go/network/: network.cpp  network.go  network.h
cmake/: arch.cmake  compilation_flags.cmake  macros.cmake  openssl.cmake  xcode.cmake
demos-cpp/basic_primitive/: CMakeLists.txt
demos-cpp/zk/: CMakeLists.txt  demo_nizk.h  main.cpp
demos-go/cb-mpc-go/: go.mod  go.sum
demos-go/cb-mpc-go/api/curve/: curve.go  curve_test.go  doc.go  fromref.go  point.go  scalar.go  scalar_test.go
demos-go/cb-mpc-go/api/mpc/: access_structure.go  agree_random.go  agreer_andom_test.go  doc.go  ecdsa_2p.go  ecdsa_2p_test.go  ecdsa_mp.go  ecdsa_mp_test.go  ecdsa_mp_threshold_test.go  ecdsa_mp_validation_test.go  eddsa_mp.go  eddsa_mp_test.go  job.go  job_mp.go  (+2 more)
demos-go/cb-mpc-go/cblib/: cblib.go  cblib.h
demos-go/cmd/: ETH_ADDRESS_GUIDE.md  eth_address_generator.py  eth_client.py
demos-go/cmd/eth-client/: README.md  USAGE.md  build.sh  eth_client_standalone.go  go.mod  run.sh
demos-go/cmd/threshold-ecdsa-web/: .gitignore  Makefile  README.md  config-0.yaml  config-1.yaml  config-2.yaml  config-3.yaml  go.mod  go.sum  handlers.go  main.go  web.go
demos-go/examples/access-structure/: go.mod  main.go
demos-go/examples/agreerandom/: go.mod  main.go
demos-go/examples/ecdsa-2pc/: go.mod  main.go
demos-go/examples/ecdsa-mpc-with-backup/: go.mod  go.sum  main.go
demos-go/examples/zk/: go.mod  go.sum  main.go
demos-go/mocknet/: doc.go  go.mod  runner.go  runner_test.go
demos/demos-cpp/basic_primitive/: CMakeLists.txt  main.cpp
demos/demos-cpp/zk/: CMakeLists.txt
demos/demos-go/agreerandom/: go.mod  main.go
demos/demos-go/ecdsa-2pc/: go.mod  main.go
demos/demos-go/ecdsa-mpc-with-backup/: go.mod  main.go
demos/demos-go/zk/: go.mod  main.go
demos/mocknet/: context.go  go.mod  runner.go  runner_test.go
docs/: README.md
scripts/: install.sh  make-release.sh  run-demos.sh
scripts/openssl/: build-static-openssl-linux.sh  build-static-openssl-macos-m1.sh  build-static-openssl-macos.sh
src/cbmpc/core/: CMakeLists.txt  buf.cpp  buf.h  buf128.cpp  buf128.h  buf256.cpp  buf256.h  cmem.h  convert.cpp  convert.h  error.cpp  error.h  extended_uint.cpp  extended_uint.h  log.h  macros.h  precompiled.h  strext.cpp  strext.h  thread.h  utils.h
src/cbmpc/crypto/: CMakeLists.txt  base.cpp  base.h  base_bn.cpp  base_bn.h  base_ec_core.cpp  base_ec_core.h  base_ecc.cpp  base_ecc.h  base_ecc_secp256k1.cpp  base_ecc_secp256k1.h  base_eddsa.cpp  base_eddsa.h  base_hash.cpp  base_hash.h  base_mod.cpp  base_mod.h  base_paillier.cpp  base_paillier.h  base_pki.cpp  base_pki.h  base_rsa.cpp  base_rsa.h  base_rsa_oaep.cpp  commitment.h  drbg.cpp  ec25519_core.cpp  ec25519_core.h  elgamal.cpp  elgamal.h  lagrange.cpp  lagrange.h  ro.cpp  ro.h  scope.h  secret_sharing.cpp  secret_sharing.h  tdh2.cpp  tdh2.h
src/cbmpc/protocol/: CMakeLists.txt  agree_random.cpp  agree_random.h  committed_broadcast.h  data_transport.h  ec_dkg.cpp  ec_dkg.h  ecdsa_2p.cpp  ecdsa_2p.h  ecdsa_mp.cpp  ecdsa_mp.h  eddsa.cpp  eddsa.h  hd_keyset_ecdsa_2p.cpp  hd_keyset_ecdsa_2p.h  hd_keyset_eddsa_2p.cpp  hd_keyset_eddsa_2p.h  hd_tree_bip32.cpp  hd_tree_bip32.h  int_commitment.cpp  int_commitment.h  mpc_job.cpp  mpc_job.h  mpc_job_session.cpp  mpc_job_session.h  ot.cpp  ot.h  pve.cpp  pve.h  pve_ac.cpp  pve_ac.h  schnorr_2p.cpp  schnorr_2p.h  schnorr_mp.cpp  schnorr_mp.h  sid.h  util.h
src/cbmpc/zk/: CMakeLists.txt  fischlin.cpp  fischlin.h  small_primes.cpp  small_primes.h  zk_ec.cpp  zk_ec.h  zk_elgamal_com.cpp  zk_elgamal_com.h  zk_paillier.cpp  zk_paillier.h  zk_pedersen.cpp  zk_pedersen.h  zk_unknown_order.cpp  zk_unknown_order.h  zk_util.h
tests/: CMakeLists.txt
tests/dudect/: CMakeLists.txt  README.md  dudect_elliptic_test.cpp  dudect_mod_test.cpp
tests/dudect/dudect_util/: dudect.h  dudect_implementation.h
tests/unit/: CMakeLists.txt
tests/unit/core/: test_buf.cpp  test_buf128.cpp  test_buf256.cpp  test_convert.cpp  test_error.cpp  test_util.cpp
tests/unit/crypto/: test_base.cpp  test_base_bn.cpp  test_base_ecc.cpp  test_base_mod.cpp  test_base_pki.cpp  test_base_rsa.cpp  test_commitment.cpp  test_ecc.cpp  test_eddsa.cpp  test_elgamal.cpp  test_lagrange.cpp  test_ro.cpp  test_secret_sharing.cpp  test_tdh2.cpp
tests/unit/protocol/: test_agree_random.cpp  test_broadcast.cpp  test_ecdsa_2p.cpp  test_ecdsa_mp.cpp  test_hdmpc_ecdsa_2p.cpp  test_hdmpc_eddsa_2p.cpp  test_int_commitment.cpp  test_mpc_network.cpp  test_ot.cpp  test_pve.cpp  test_pve_ac.cpp  test_schnorr_2p.cpp  test_schnorr_mp.cpp  test_util.cpp
tests/unit/zk/: test_zk.cpp
tests/utils/: CMakeLists.txt  test_macros.h
tests/utils/crypto/: nizk.h
tests/utils/data/: ac.h  data_generator.cpp  data_generator.h  mpc_data_generator.cpp  mpc_data_generator.h  tdh2.h  test_data_factory.cpp  test_data_factory.h  test_node.h  zk_completeness.h  zk_data_generator.cpp  zk_data_generator.h
tests/utils/data/sampler/: base.h  bn.cpp  bn.h  buf.cpp  buf.h  ecp.cpp  ecp.h  elgamal.cpp  elgamal.h  paillier.cpp  paillier.h
tests/utils/local_network/: channel.cpp  channel.h  mpc_runner.cpp  mpc_runner.h  mpc_tester.h  network_context.cpp  network_context.h  partner.cpp  partner.h
tools/benchmark/: CMakeLists.txt  README.md  benchmark.makefile  bm_agree_random.cpp  bm_commitment.cpp  bm_core_bn.cpp  bm_drbg.cpp  bm_ecdsa.cpp  bm_eddsa.cpp  bm_elgamal.cpp  bm_elliptic_curve.cpp  bm_hash.cpp  bm_main.cpp  bm_ot.cpp  bm_paillier.cpp  bm_pve.cpp  bm_share.cpp  bm_sid.cpp  bm_tdh2.cpp  bm_test.cpp  bm_zk.cpp  mpc_util.h  prepare_benchmark_action.sh  util.h
vendors/secp256k1/src/: util.h
(+57 files in other folders)
